--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
@@ -23,8 +25,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^7.0.0 ",
-    "eslint-plugin-react": "7.34.1",
     "eslint-config-ay": "^1.0.4",
+    "eslint-plugin-react": "7.34.1",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "typescript": "^5.0.2",
