--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^7.0.0 ",
     "eslint-config-ay": "^1.0.4",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "7.34.1",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
